プライバシー追加

--- a/src/privacy-page.html
+++ b/src/privacy-page.html
@@ -133,7 +133,7 @@
                       </a>
                     </li>
                     <li class="drawer-menu__item">
-                      <a href="#" class="drawer-menu__link-b">
+                      <a href="privacy-page.html" class="drawer-menu__link-b">
                         <p class="drawer__logo-text">プライバシー<br />ポリシー</p>
                       </a>
                     </li>
@@ -160,7 +160,7 @@
         <section id="sub-page-mv" class="sub-page-mv">
           <div class="sub-page-mv__inner">
             <div class="sub-page-mv__title">
-              <h1 class="sub-page-mv__title-main page-section-title">Site MAP</h1>
+              <h1 class="sub-page-mv__title-main page-section-title">Privacy Policy</h1>
             </div>
             <picture class="sub-page-mv__picture">
               <source srcset="./assets/images/site-map-page-pc-img.jpg" media="(min-width: 768px)" />
@@ -174,87 +174,17 @@
             <span>
               <a href="./"><span>TOP</span></a>
             </span>
-            <span>サイトマップ</span>
+            <span>プライバシーポリシー</span>
           </div>
         </div>
-        <!--サイトマップ-->
-        <section id="site-map-page" class="site-map-page site-map-page-top">
-          <div class="site-map-page__inner inner">
-            <div class="site-map__container site-map-menu">
-              <div class="site-map-menu__left">
-                <ul class="site-map-menu__items-a">
-                  <li class="site-map-menu__item">
-                    <a href="#" class="site-map-menu__link-a">
-                      <p class="site-map-menu__logo-text">キャンペーン</p>
-                    </a>
-                  </li>
-                  <li class="site-map-menu__item-text"><a href="#">ライセンス取得</a></li>
-                  <li class="site-map-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
-                  <li class="site-map-menu__item-text"><a href="#">ナイトダイビング</a></li>
-                  <li class="site-map-menu__item">
-                    <a href="#" class="site-map-menu__link-b">
-                      <p class="site-map-menu__logo-text">私たちについて</p>
-                    </a>
-                  </li>
-                </ul>
-                <ul class="site-map-menu__items-b">
-                  <li class="site-map-menu__item">
-                    <a href="#" class="site-map-menu__link-a">
-                      <p class="site-map-menu__logo-text">ダイビング情報</p>
-                    </a>
-                  </li>
-                  <li class="site-map-menu__item-text"><a href="#">ライセンス講習</a></li>
-                  <li class="site-map-menu__item-text"><a href="#">体験ダイビング</a></li>
-                  <li class="site-map-menu__item-text"><a href="#">ファンダイビング</a></li>
-                  <li class="site-map-menu__item">
-                    <a href="blog-page.html" class="site-map-menu__link-b">
-                      <p class="site-map-menu__logo-text">ブログ</p>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-              <div class="site-map-menu__right">
-                <ul class="site-map-menu__items-a">
-                  <li class="site-map-menu__item">
-                    <a href="voice-page.html" class="site-map-menu__link-a">
-                      <p class="site-map-menu__logo-text">お客様の声</p>
-                    </a>
-                  </li>
-                  <li class="site-map-menu__item">
-                    <a href="price-page.html" class="site-map-menu__link-b">
-                      <p class="site-map-menu__logo-text">料金一覧</p>
-                    </a>
-                  </li>
-                  <li class="site-map-menu__item-text-b"><a href="#">ライセンス講習</a></li>
-                  <li class="site-map-menu__item-text-b"><a href="#">体験ダイビング</a></li>
-                  <li class="site-map-menu__item-text-b"><a href="#">ファンダイビング</a></li>
-                </ul>
-                <ul class="site-map-menu__items-c">
-                  <li class="site-map-menu__item">
-                    <a href="faq-page.html" class="site-map-menu__link-a">
-                      <p class="site-map-menu__logo-text">よくある質問</p>
-                    </a>
-                  </li>
-                  <li class="site-map-menu__item">
-                    <a href="privacy-page.html" class="site-map-menu__link-b">
-                      <p class="site-map-menu__logo-text">プライバシー<br class="md-show" />ポリシー</p>
-                    </a>
-                  </li>
-                  <li class="site-map-menu__item">
-                    <a href="#" class="site-map-menu__link-b">
-                      <p class="site-map-menu__logo-text">利用規約</p>
-                    </a>
-                  </li>
-                  <li class="site-map-menu__item">
-                    <a href="contact-page.html" class="site-map-menu__link-b">
-                      <p class="site-map-menu__logo-text">お問い合わせ</p>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
+        <!--プライバシー-->
+        <section  id="privacy-page" class="privacy-page privacy-page-top">
+          <div class="privacy-page__inner inner">
+            <h2 class="privacy-page__title">プライバシーポリシー</h2>
+            <div class="privacy-page__container"></div>
           </div>
         </section>
+
         <!--コンタクト-->
         <section id="contact" class="contact contact-site-map-page-top">
           <div class="contact__inner inner">
