--- a/src/voice-page.html
+++ b/src/voice-page.html
@@ -132,7 +132,7 @@
                     </a>
                   </li>
                   <li class="drawer-menu__item">
-                    <a href="#" class="drawer-menu__link-b">
+                    <a href="privacy-page.html" class="drawer-menu__link-b">
                       <p class="drawer__logo-text">プライバシー<br />ポリシー</p>
                     </a>
                   </li>
@@ -482,7 +482,7 @@
                 </a>
               </li>
               <li class="footer-menu__item">
-                <a href="#" class="footer-menu__link-b">
+                <a href="privacy-page.html" class="footer-menu__link-b">
                   <p class="footer-menu__logo-text">プライバシー<br class="md-show" />ポリシー</p>
                 </a>
               </li>
