--- a/src/price-page.html
+++ b/src/price-page.html
@@ -137,7 +137,7 @@
                     </a>
                   </li>
                   <li class="drawer-menu__item">
-                    <a href="#" class="drawer-menu__link-b">
+                    <a href="terms-page.html" class="drawer-menu__link-b">
                       <p class="drawer__logo-text">利用規約</p>
                     </a>
                   </li>
@@ -413,7 +413,7 @@
                 </a>
               </li>
               <li class="footer-menu__item">
-                <a href="#" class="footer-menu__link-b">
+                <a href="terms-page.html" class="footer-menu__link-b">
                   <p class="footer-menu__logo-text">利用規約</p>
                 </a>
               </li>
