--- a/src/site-map-page.html
+++ b/src/site-map-page.html
@@ -241,7 +241,7 @@
                     </a>
                   </li>
                   <li class="site-map-menu__item">
-                    <a href="#" class="site-map-menu__link-b">
+                    <a href="terms-page.html" class="site-map-menu__link-b">
                       <p class="site-map-menu__logo-text">利用規約</p>
                     </a>
                   </li>
@@ -396,7 +396,7 @@
                   </a>
                 </li>
                 <li class="footer-menu__item">
-                  <a href="#" class="footer-menu__link-b">
+                  <a href="terms-page.html" class="footer-menu__link-b">
                     <p class="footer-menu__logo-text">利用規約</p>
                   </a>
                 </li>
