--- a/src/terms-page.html
+++ b/src/terms-page.html
@@ -160,7 +160,7 @@
         <section id="sub-page-mv" class="sub-page-mv">
           <div class="sub-page-mv__inner">
             <div class="sub-page-mv__title">
-              <h1 class="sub-page-mv__title-main page-section-title">Privacy Policy</h1>
+              <h1 class="sub-page-mv__title-main page-section-title">Terms of Service</h1>
             </div>
             <picture class="sub-page-mv__picture">
               <source srcset="./assets/images/site-map-page-pc-img.jpg" media="(min-width: 768px)" />
@@ -174,7 +174,7 @@
             <span>
               <a href="./"><span>TOP</span></a>
             </span>
-            <span>プライバシーポリシー</span>
+            <span>利用規約</span>
           </div>
         </div>
         <!--プライバシー-->
