--- a/src/page-404.html
+++ b/src/page-404.html
@@ -170,7 +170,7 @@
           <div class="page-404__inner inner">
             <div class="page-404__box">
               <h1 class="page-404__title">404</h1>
-              <div class="page-404__text">申し訳ありません。<br />お探しのページが見つかりません。</div>
+              <p class="page-404__text">申し訳ありません。<br />お探しのページが見つかりません。</p>
             </div>
           </div>
           <div class="page-404__button-layout">
@@ -183,9 +183,9 @@
         <div class="footer__inner inner">
           <div class="footer__title footer-title">
             <a href="#" class="footer-title__name-layout">
-              <h3 class="footer-title__name">
+              <div class="footer-title__name">
                 <img class="footer-title__name-logo" src="./assets/images/logo.svg" alt="CodeUps" />
-              </h3>
+              </div>
             </a>
             <div class="footer-title__logo-box">
               <a href="#" target="_blank" class="footer-title__facebook-logo">
