--- a/src/thanks-page.html
+++ b/src/thanks-page.html
@@ -184,10 +184,10 @@
         <section id="thanks-page" class="thanks-pagee thanks-page-top">
           <div class="thanks-page__inner inner">
             <div class="thanks-page__box">
-              <div class="thanks-page__title">お問い合わせ内容を送信完了しました。</div>
-              <div class="thanks-page__text">
+              <p class="thanks-page__title">お問い合わせ内容を送信完了しました。</p>
+              <p class="thanks-page__text">
                 このたびは、お問い合わせ頂き<br class="md-show" />誠にありがとうございます。<br class="md-show" /><br class="md-none">お送り頂きました内容を確認の上、<br class="md-show" />3営業日以内に折り返しご連絡させて頂きます。<br class="md-show" /><br class="md-none">また、ご記入頂いたメールアドレスへ、<br class="md-show" />自動返信の確認メールをお送りしております。
-              </div>
+              </p>
             </div>
           </div>
         </section>
@@ -197,9 +197,9 @@
         <div class="footer__inner inner">
           <div class="footer__title footer-title">
             <a href="#" class="footer-title__name-layout">
-              <h3 class="footer-title__name">
+              <div class="footer-title__name">
                 <img class="footer-title__name-logo" src="./assets/images/logo.svg" alt="CodeUps" />
-              </h3>
+              </div>
             </a>
             <div class="footer-title__logo-box">
               <a href="#" target="_blank" class="footer-title__facebook-logo">
