--- a/src/site-map-page.html
+++ b/src/site-map-page.html
@@ -81,7 +81,7 @@
                 <div class="drawer-menu__container-left">
                   <ul class="drawer-menu__items-upper">
                     <li class="drawer-menu__item">
-                      <a href="campaign-page.html" class="drawer-menu__link-a">
+                      <a href="campaign-page.html" class="drawer-menu__link-main">
                         <p class="drawer__logo-text">キャンペーン</p>
                       </a>
                     </li>
@@ -89,14 +89,14 @@
                     <li class="drawer-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
                     <li class="drawer-menu__item-text"><a href="#">ナイトダイビング</a></li>
                     <li class="drawer-menu__item">
-                      <a href="aboutus-page.html" class="drawer-menu__link-b">
+                      <a href="aboutus-page.html" class="drawer-menu__link-sub">
                         <p class="drawer__logo-text">私たちについて</p>
                       </a>
                     </li>
                   </ul>
                   <ul class="drawer-menu__items-bottom">
                     <li class="drawer-menu__item">
-                      <a href="information-page.html" class="drawer-menu__link-a">
+                      <a href="information-page.html" class="drawer-menu__link-main">
                         <p class="drawer__logo-text">ダイビング情報</p>
                       </a>
                     </li>
@@ -104,7 +104,7 @@
                     <li class="drawer-menu__item-text"><a href="#">体験ダイビング</a></li>
                     <li class="drawer-menu__item-text"><a href="#">ファンダイビング</a></li>
                     <li class="drawer-menu__item">
-                      <a href="blog-page.html" class="drawer-menu__link-b">
+                      <a href="blog-page.html" class="drawer-menu__link-sub">
                         <p class="drawer__logo-text">ブログ</p>
                       </a>
                     </li>
@@ -113,12 +113,12 @@
                 <div class="drawer-menu__container-right">
                   <ul class="drawer-menu__items-upper">
                     <li class="drawer-menu__item">
-                      <a href="voice-page.html" class="drawer-menu__link-a">
+                      <a href="voice-page.html" class="drawer-menu__link-main">
                         <p class="drawer__logo-text">お客様の声</p>
                       </a>
                     </li>
                     <li class="drawer-menu__item">
-                      <a href="price-page.html" class="drawer-menu__link-b">
+                      <a href="price-page.html" class="drawer-menu__link-sub">
                         <p class="drawer__logo-text">料金一覧</p>
                       </a>
                     </li>
@@ -128,22 +128,22 @@
                   </ul>
                   <ul class="drawer-menu__items-bottom">
                     <li class="drawer-menu__item">
-                      <a href="faq-page.html" class="drawer-menu__link-a">
+                      <a href="faq-page.html" class="drawer-menu__link-main">
                         <p class="drawer__logo-text">よくある質問</p>
                       </a>
                     </li>
                     <li class="drawer-menu__item">
-                      <a href="#" class="drawer-menu__link-b">
+                      <a href="#" class="drawer-menu__link-sub">
                         <p class="drawer__logo-text">プライバシー<br />ポリシー</p>
                       </a>
                     </li>
                     <li class="drawer-menu__item">
-                      <a href="#" class="drawer-menu__link-b">
+                      <a href="#" class="drawer-menu__link-sub">
                         <p class="drawer__logo-text">利用規約</p>
                       </a>
                     </li>
                     <li class="drawer-menu__item">
-                      <a href="contact-page.html" class="drawer-menu__link-b">
+                      <a href="contact-page.html" class="drawer-menu__link-sub">
                         <p class="drawer__logo-text">お問い合わせ</p>
                       </a>
                     </li>
@@ -182,9 +182,9 @@
           <div class="site-map-page__inner inner">
             <div class="site-map__container site-map-menu">
               <div class="site-map-menu__left">
-                <ul class="site-map-menu__items-a">
+                <ul class="site-map-menu__left-items-upper">
                   <li class="site-map-menu__item">
-                    <a href="#" class="site-map-menu__link-a">
+                    <a href="#" class="site-map-menu__link-main">
                       <p class="site-map-menu__logo-text">キャンペーン</p>
                     </a>
                   </li>
@@ -192,14 +192,14 @@
                   <li class="site-map-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
                   <li class="site-map-menu__item-text"><a href="#">ナイトダイビング</a></li>
                   <li class="site-map-menu__item">
-                    <a href="#" class="site-map-menu__link-b">
+                    <a href="#" class="site-map-menu__link-sub">
                       <p class="site-map-menu__logo-text">私たちについて</p>
                     </a>
                   </li>
                 </ul>
-                <ul class="site-map-menu__items-b">
+                <ul class="site-map-menu__left-items-bottom">
                   <li class="site-map-menu__item">
-                    <a href="#" class="site-map-menu__link-a">
+                    <a href="#" class="site-map-menu__link-main">
                       <p class="site-map-menu__logo-text">ダイビング情報</p>
                     </a>
                   </li>
@@ -207,21 +207,21 @@
                   <li class="site-map-menu__item-text"><a href="#">体験ダイビング</a></li>
                   <li class="site-map-menu__item-text"><a href="#">ファンダイビング</a></li>
                   <li class="site-map-menu__item">
-                    <a href="blog-page.html" class="site-map-menu__link-b">
+                    <a href="blog-page.html" class="site-map-menu__link-sub">
                       <p class="site-map-menu__logo-text">ブログ</p>
                     </a>
                   </li>
                 </ul>
               </div>
               <div class="site-map-menu__right">
-                <ul class="site-map-menu__items-a">
+                <ul class="site-map-menu__right-items-upper">
                   <li class="site-map-menu__item">
-                    <a href="voice-page.html" class="site-map-menu__link-a">
+                    <a href="voice-page.html" class="site-map-menu__link-main">
                       <p class="site-map-menu__logo-text">お客様の声</p>
                     </a>
                   </li>
                   <li class="site-map-menu__item">
-                    <a href="price-page.html" class="site-map-menu__link-b">
+                    <a href="price-page.html" class="site-map-menu__link-sub">
                       <p class="site-map-menu__logo-text">料金一覧</p>
                     </a>
                   </li>
@@ -229,24 +229,24 @@
                   <li class="site-map-menu__item-text-b"><a href="#">体験ダイビング</a></li>
                   <li class="site-map-menu__item-text-b"><a href="#">ファンダイビング</a></li>
                 </ul>
-                <ul class="site-map-menu__items-c">
+                <ul class="site-map-menu__right-items-bottom">
                   <li class="site-map-menu__item">
-                    <a href="faq-page.html" class="site-map-menu__link-a">
+                    <a href="faq-page.html" class="site-map-menu__link-main">
                       <p class="site-map-menu__logo-text">よくある質問</p>
                     </a>
                   </li>
                   <li class="site-map-menu__item">
-                    <a href="privacy-page.html" class="site-map-menu__link-b">
+                    <a href="privacy-page.html" class="site-map-menu__link-sub">
                       <p class="site-map-menu__logo-text">プライバシー<br class="md-show" />ポリシー</p>
                     </a>
                   </li>
                   <li class="site-map-menu__item">
-                    <a href="terms-page.html" class="site-map-menu__link-b">
+                    <a href="terms-page.html" class="site-map-menu__link-sub">
                       <p class="site-map-menu__logo-text">利用規約</p>
                     </a>
                   </li>
                   <li class="site-map-menu__item">
-                    <a href="contact-page.html" class="site-map-menu__link-b">
+                    <a href="contact-page.html" class="site-map-menu__link-sub">
                       <p class="site-map-menu__logo-text">お問い合わせ</p>
                     </a>
                   </li>
@@ -337,9 +337,9 @@
           </div>
           <div class="footer__container footer-menu">
             <div class="footer-menu__left">
-              <ul class="footer-menu__items-a">
+              <ul class="footer-menu__left-items-upper">
                 <li class="footer-menu__item">
-                  <a href="#" class="footer-menu__link-a">
+                  <a href="#" class="footer-menu__link-main">
                     <p class="footer-menu__logo-text">キャンペーン</p>
                   </a>
                 </li>
@@ -347,14 +347,14 @@
                 <li class="footer-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
                 <li class="footer-menu__item-text"><a href="#">ナイトダイビング</a></li>
                 <li class="footer-menu__item">
-                  <a href="#" class="footer-menu__link-b">
+                  <a href="#" class="footer-menu__link-sub">
                     <p class="footer-menu__logo-text">私たちについて</p>
                   </a>
                 </li>
               </ul>
-              <ul class="footer-menu__items-b">
+              <ul class="footer-menu__left-items-bottom">
                 <li class="footer-menu__item">
-                  <a href="#" class="footer-menu__link-a">
+                  <a href="#" class="footer-menu__main">
                     <p class="footer-menu__logo-text">ダイビング情報</p>
                   </a>
                 </li>
@@ -362,21 +362,21 @@
                 <li class="footer-menu__item-text"><a href="#">体験ダイビング</a></li>
                 <li class="footer-menu__item-text"><a href="#">ファンダイビング</a></li>
                 <li class="footer-menu__item">
-                  <a href="blog-page.html" class="footer-menu__link-b">
+                  <a href="blog-page.html" class="footer-menu__link-sub">
                     <p class="footer-menu__logo-text">ブログ</p>
                   </a>
                 </li>
               </ul>
             </div>
             <div class="footer-menu__right">
-              <ul class="footer-menu__items-a">
+              <ul class="footer-menu__right-items-upper">
                 <li class="footer-menu__item">
-                  <a href="voice-page.html" class="footer-menu__link-a">
+                  <a href="voice-page.html" class="footer-menu__link-main">
                     <p class="footer-menu__logo-text">お客様の声</p>
                   </a>
                 </li>
                 <li class="footer-menu__item">
-                  <a href="price-page.html" class="footer-menu__link-b">
+                  <a href="price-page.html" class="footer-menu__link-sub">
                     <p class="footer-menu__logo-text">料金一覧</p>
                   </a>
                 </li>
@@ -384,24 +384,24 @@
                 <li class="footer-menu__item-text-b"><a href="#">体験ダイビング</a></li>
                 <li class="footer-menu__item-text-b"><a href="#">ファンダイビング</a></li>
               </ul>
-              <ul class="footer-menu__items-c">
+              <ul class="footer-menu__right-items-bottom">
                 <li class="footer-menu__item">
-                  <a href="faq-page.html" class="footer-menu__link-a">
+                  <a href="faq-page.html" class="footer-menu__link-main">
                     <p class="footer-menu__logo-text">よくある質問</p>
                   </a>
                 </li>
                 <li class="footer-menu__item">
-                  <a href="privacy-page.html" class="footer-menu__link-b">
+                  <a href="privacy-page.html" class="footer-menu__link-sub">
                     <p class="footer-menu__logo-text">プライバシー<br class="md-show" />ポリシー</p>
                   </a>
                 </li>
                 <li class="footer-menu__item">
-                  <a href="terms-page.html" class="footer-menu__link-b">
+                  <a href="terms-page.html" class="footer-menu__link-sub">
                     <p class="footer-menu__logo-text">利用規約</p>
                   </a>
                 </li>
                 <li class="footer-menu__item">
-                  <a href="contact-page.html" class="footer-menu__link-b">
+                  <a href="contact-page.html" class="footer-menu__link-sub">
                     <p class="footer-menu__logo-text">お問い合わせ</p>
                   </a>
                 </li>
