--- a/src/thanks-page.html
+++ b/src/thanks-page.html
@@ -81,7 +81,7 @@
                 <div class="drawer-menu__container-left">
                   <ul class="drawer-menu__items-upper">
                     <li class="drawer-menu__item">
-                      <a href="campaign-page.html" class="drawer-menu__link-a">
+                      <a href="campaign-page.html" class="drawer-menu__link-main">
                         <p class="drawer__logo-text">キャンペーン</p>
                       </a>
                     </li>
@@ -89,14 +89,14 @@
                     <li class="drawer-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
                     <li class="drawer-menu__item-text"><a href="#">ナイトダイビング</a></li>
                     <li class="drawer-menu__item">
-                      <a href="aboutus-page.html" class="drawer-menu__link-b">
+                      <a href="aboutus-page.html" class="drawer-menu__link-sub">
                         <p class="drawer__logo-text">私たちについて</p>
                       </a>
                     </li>
                   </ul>
                   <ul class="drawer-menu__items-bottom">
                     <li class="drawer-menu__item">
-                      <a href="information-page.html" class="drawer-menu__link-a">
+                      <a href="information-page.html" class="drawer-menu__link-main">
                         <p class="drawer__logo-text">ダイビング情報</p>
                       </a>
                     </li>
@@ -104,7 +104,7 @@
                     <li class="drawer-menu__item-text"><a href="#">体験ダイビング</a></li>
                     <li class="drawer-menu__item-text"><a href="#">ファンダイビング</a></li>
                     <li class="drawer-menu__item">
-                      <a href="blog-page.html" class="drawer-menu__link-b">
+                      <a href="blog-page.html" class="drawer-menu__link-sub">
                         <p class="drawer__logo-text">ブログ</p>
                       </a>
                     </li>
@@ -113,12 +113,12 @@
                 <div class="drawer-menu__container-right">
                   <ul class="drawer-menu__items-upper">
                     <li class="drawer-menu__item">
-                      <a href="voice-page.html" class="drawer-menu__link-a">
+                      <a href="voice-page.html" class="drawer-menu__link-main">
                         <p class="drawer__logo-text">お客様の声</p>
                       </a>
                     </li>
                     <li class="drawer-menu__item">
-                      <a href="price-page.html" class="drawer-menu__link-b">
+                      <a href="price-page.html" class="drawer-menu__link-sub">
                         <p class="drawer__logo-text">料金一覧</p>
                       </a>
                     </li>
@@ -128,22 +128,22 @@
                   </ul>
                   <ul class="drawer-menu__items-bottom">
                     <li class="drawer-menu__item">
-                      <a href="faq-page.html" class="drawer-menu__link-a">
+                      <a href="faq-page.html" class="drawer-menu__link-main">
                         <p class="drawer__logo-text">よくある質問</p>
                       </a>
                     </li>
                     <li class="drawer-menu__item">
-                      <a href="privacy-page.html" class="drawer-menu__link-b">
+                      <a href="privacy-page.html" class="drawer-menu__link-sub">
                         <p class="drawer__logo-text">プライバシー<br />ポリシー</p>
                       </a>
                     </li>
                     <li class="drawer-menu__item">
-                      <a href="terms-page.html" class="drawer-menu__link-b">
+                      <a href="terms-page.html" class="drawer-menu__link-sub">
                         <p class="drawer__logo-text">利用規約</p>
                       </a>
                     </li>
                     <li class="drawer-menu__item">
-                      <a href="contact-page.html" class="drawer-menu__link-b">
+                      <a href="contact-page.html" class="drawer-menu__link-sub">
                         <p class="drawer__logo-text">お問い合わせ</p>
                       </a>
                     </li>
@@ -212,9 +212,9 @@
           </div>
           <div class="footer__container footer-menu">
             <div class="footer-menu__left">
-              <ul class="footer-menu__items-a">
+              <ul class="footer-menu__left-items-upper">
                 <li class="footer-menu__item">
-                  <a href="#" class="footer-menu__link-a">
+                  <a href="#" class="footer-menu__link-main">
                     <p class="footer-menu__logo-text">キャンペーン</p>
                   </a>
                 </li>
@@ -222,14 +222,14 @@
                 <li class="footer-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
                 <li class="footer-menu__item-text"><a href="#">ナイトダイビング</a></li>
                 <li class="footer-menu__item">
-                  <a href="#" class="footer-menu__link-b">
+                  <a href="#" class="footer-menu__link-sub">
                     <p class="footer-menu__logo-text">私たちについて</p>
                   </a>
                 </li>
               </ul>
-              <ul class="footer-menu__items-b">
+              <ul class="footer-menu__left-items-bottom">
                 <li class="footer-menu__item">
-                  <a href="#" class="footer-menu__link-a">
+                  <a href="#" class="footer-menu__link-main">
                     <p class="footer-menu__logo-text">ダイビング情報</p>
                   </a>
                 </li>
@@ -237,21 +237,21 @@
                 <li class="footer-menu__item-text"><a href="#">体験ダイビング</a></li>
                 <li class="footer-menu__item-text"><a href="#">ファンダイビング</a></li>
                 <li class="footer-menu__item">
-                  <a href="blog-page.html" class="footer-menu__link-b">
+                  <a href="blog-page.html" class="footer-menu__link-sub">
                     <p class="footer-menu__logo-text">ブログ</p>
                   </a>
                 </li>
               </ul>
             </div>
             <div class="footer-menu__right">
-              <ul class="footer-menu__items-a">
+              <ul class="footer-menu__right-items-upper">
                 <li class="footer-menu__item">
-                  <a href="voice-page.html" class="footer-menu__link-a">
+                  <a href="voice-page.html" class="footer-menu__link-main">
                     <p class="footer-menu__logo-text">お客様の声</p>
                   </a>
                 </li>
                 <li class="footer-menu__item">
-                  <a href="price-page.html" class="footer-menu__link-b">
+                  <a href="price-page.html" class="footer-menu__link-sub">
                     <p class="footer-menu__logo-text">料金一覧</p>
                   </a>
                 </li>
@@ -259,24 +259,24 @@
                 <li class="footer-menu__item-text-b"><a href="#">体験ダイビング</a></li>
                 <li class="footer-menu__item-text-b"><a href="#">ファンダイビング</a></li>
               </ul>
-              <ul class="footer-menu__items-c">
+              <ul class="footer-menu__right-items-bottom">
                 <li class="footer-menu__item">
-                  <a href="faq-page.html" class="footer-menu__link-a">
+                  <a href="faq-page.html" class="footer-menu__main">
                     <p class="footer-menu__logo-text">よくある質問</p>
                   </a>
                 </li>
                 <li class="footer-menu__item">
-                  <a href="privacy-page.html" class="footer-menu__link-b">
+                  <a href="privacy-page.html" class="footer-menu__link-sub">
                     <p class="footer-menu__logo-text">プライバシー<br class="md-show" />ポリシー</p>
                   </a>
                 </li>
                 <li class="footer-menu__item">
-                  <a href="terms-page.html" class="footer-menu__link-b">
+                  <a href="terms-page.html" class="footer-menu__link-sub">
                     <p class="footer-menu__logo-text">利用規約</p>
                   </a>
                 </li>
                 <li class="footer-menu__item">
-                  <a href="contact-page.html" class="footer-menu__link-b">
+                  <a href="contact-page.html" class="footer-menu__link-sub">
                     <p class="footer-menu__logo-text">お問い合わせ</p>
                   </a>
                 </li>
