--- a/src/campaign-page.html
+++ b/src/campaign-page.html
@@ -404,7 +404,7 @@
           <div class="footer-menu__left">
             <ul class="footer-menu__left-items-upper">
               <li class="footer-menu__item">
-                <a href="campaign-page.html" class="footer-menu__main">
+                <a href="campaign-page.html" class="footer-menu__link-main">
                   <p class="footer-menu__logo-text">キャンペーン</p>
                 </a>
               </li>
