--- a/src/contact-page.html
+++ b/src/contact-page.html
@@ -80,7 +80,7 @@
               <div class="drawer-menu__container-left">
                 <ul class="drawer-menu__items-upper">
                   <li class="drawer-menu__item">
-                    <a href="campaign-page.html" class="drawer-menu__main">
+                    <a href="campaign-page.html" class="drawer-menu__link-main">
                       <p class="drawer__logo-text">キャンペーン</p>
                     </a>
                   </li>
@@ -103,7 +103,7 @@
                   <li class="drawer-menu__item-text"><a href="#">体験ダイビング</a></li>
                   <li class="drawer-menu__item-text"><a href="#">ファンダイビング</a></li>
                   <li class="drawer-menu__item">
-                    <a href="blog-page.html" class="drawer-menu__sub">
+                    <a href="blog-page.html" class="drawer-menu__link-sub">
                       <p class="drawer__logo-text">ブログ</p>
                     </a>
                   </li>
@@ -272,7 +272,7 @@
           <div class="footer-menu__left">
             <ul class="footer-menu__left-items-upper">
               <li class="footer-menu__item">
-                <a href="#" class="footer-menu__main">
+                <a href="#" class="footer-menu__link-main">
                   <p class="footer-menu__logo-text">キャンペーン</p>
                 </a>
               </li>
@@ -280,7 +280,7 @@
               <li class="footer-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
               <li class="footer-menu__item-text"><a href="#">ナイトダイビング</a></li>
               <li class="footer-menu__item">
-                <a href="#" class="footer-menu__sub">
+                <a href="#" class="footer-menu__link-sub">
                   <p class="footer-menu__logo-text">私たちについて</p>
                 </a>
               </li>
@@ -309,7 +309,7 @@
                 </a>
               </li>
               <li class="footer-menu__item">
-                <a href="price-page.html" class="footer-menu__sub">
+                <a href="price-page.html" class="footer-menu__link-sub">
                   <p class="footer-menu__logo-text">料金一覧</p>
                 </a>
               </li>
