--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
               <div class="drawer-menu__container-left">
                 <ul class="drawer-menu__items-upper">
                   <li class="drawer-menu__item">
-                    <a href="campaign-page.html" class="drawer-menu__main">
+                    <a href="campaign-page.html" class="drawer-menu__link-main">
                       <p class="drawer__logo-text">キャンペーン</p>
                     </a>
                   </li>
@@ -103,7 +103,7 @@
                   <li class="drawer-menu__item-text"><a href="#">体験ダイビング</a></li>
                   <li class="drawer-menu__item-text"><a href="#">ファンダイビング</a></li>
                   <li class="drawer-menu__item">
-                    <a href="blog-page.html" class="drawer-menu__sub">
+                    <a href="blog-page.html" class="drawer-menu__link-sub">
                       <p class="drawer__logo-text">ブログ</p>
                     </a>
                   </li>
@@ -132,7 +132,7 @@
                     </a>
                   </li>
                   <li class="drawer-menu__item">
-                    <a href="privacy-page.html" class="drawer-menu__sub">
+                    <a href="privacy-page.html" class="drawer-menu__link-sub">
                       <p class="drawer__logo-text">プライバシー<br />ポリシー</p>
                     </a>
                   </li>
@@ -657,7 +657,7 @@
                 </a>
               </li>
               <li class="footer-menu__item">
-                <a href="privacy-page.html" class="footer-menu__sub">
+                <a href="privacy-page.html" class="footer-menu__link-sub">
                   <p class="footer-menu__logo-text">プライバシー<br class="md-show" />ポリシー</p>
                 </a>
               </li>
