--- a/src/price-page.html
+++ b/src/price-page.html
@@ -80,7 +80,7 @@
               <div class="drawer-menu__container-left">
                 <ul class="drawer-menu__items-upper">
                   <li class="drawer-menu__item">
-                    <a href="campaign-page.html" class="drawer-menu__main">
+                    <a href="campaign-page.html" class="drawer-menu__link-main">
                       <p class="drawer__logo-text">キャンペーン</p>
                     </a>
                   </li>
@@ -88,7 +88,7 @@
                   <li class="drawer-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
                   <li class="drawer-menu__item-text"><a href="#">ナイトダイビング</a></li>
                   <li class="drawer-menu__item">
-                    <a href="aboutus-page.html" class="drawer-menu__sub">
+                    <a href="aboutus-page.html" class="drawer-menu__link-sub">
                       <p class="drawer__logo-text">私たちについて</p>
                     </a>
                   </li>
@@ -356,7 +356,7 @@
           <div class="footer-menu__left">
             <ul class="footer-menu__left-items-upper">
               <li class="footer-menu__item">
-                <a href="#" class="footer-menu__main">
+                <a href="#" class="footer-menu__link-main">
                   <p class="footer-menu__logo-text">キャンペーン</p>
                 </a>
               </li>
