--- a/src/site-map-page.html
+++ b/src/site-map-page.html
@@ -354,7 +354,7 @@
               </ul>
               <ul class="footer-menu__left-items-bottom">
                 <li class="footer-menu__item">
-                  <a href="#" class="footer-menu__main">
+                  <a href="#" class="footer-menu__link-main">
                     <p class="footer-menu__logo-text">ダイビング情報</p>
                   </a>
                 </li>
