--- a/src/thanks-page.html
+++ b/src/thanks-page.html
@@ -261,7 +261,7 @@
               </ul>
               <ul class="footer-menu__right-items-bottom">
                 <li class="footer-menu__item">
-                  <a href="faq-page.html" class="footer-menu__main">
+                  <a href="faq-page.html" class="footer-menu__link-main">
                     <p class="footer-menu__logo-text">よくある質問</p>
                   </a>
                 </li>
