--- a/src/voice-page.html
+++ b/src/voice-page.html
@@ -80,7 +80,7 @@
               <div class="drawer-menu__container-left">
                 <ul class="drawer-menu__items-upper">
                   <li class="drawer-menu__item">
-                    <a href="campaign-page.html" class="drawer-menu__main">
+                    <a href="campaign-page.html" class="drawer-menu__link-main">
                       <p class="drawer__logo-text">キャンペーン</p>
                     </a>
                   </li>
@@ -445,7 +445,7 @@
             </ul>
             <ul class="footer-menu__left-items-bottom">
               <li class="footer-menu__item">
-                <a href="information-page.html" class="footer-menu__main">
+                <a href="information-page.html" class="footer-menu__link-main">
                   <p class="footer-menu__logo-text">ダイビング情報</p>
                 </a>
               </li>
@@ -462,7 +462,7 @@
           <div class="footer-menu__right">
             <ul class="footer-menu__right-items-upper">
               <li class="footer-menu__item">
-                <a href="voice-page.html" class="footer-menu__main">
+                <a href="voice-page.html" class="footer-menu__link-main">
                   <p class="footer-menu__logo-text">お客様の声</p>
                 </a>
               </li>
