--- a/src/aboutus-page.html
+++ b/src/aboutus-page.html
@@ -117,7 +117,7 @@
                     </a>
                   </li>
                   <li class="drawer-menu__item">
-                    <a href="price-page.html" class="drawer-menu__sub">
+                    <a href="price-page.html" class="drawer-menu__link-sub">
                       <p class="drawer__logo-text">料金一覧</p>
                     </a>
                   </li>
@@ -408,7 +408,7 @@
                 </a>
               </li>
               <li class="footer-menu__item">
-                <a href="privacy-page.html" class="footer-menu__sub">
+                <a href="privacy-page.html" class="footer-menu__link-sub">
                   <p class="footer-menu__logo-text">プライバシー<br class="md-show" />ポリシー</p>
                 </a>
               </li>
