--- a/src/blog-page-detail.html
+++ b/src/blog-page-detail.html
@@ -88,7 +88,7 @@
                   <li class="drawer-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
                   <li class="drawer-menu__item-text"><a href="#">ナイトダイビング</a></li>
                   <li class="drawer-menu__item">
-                    <a href="aboutus-page.html" class="drawer-menu__sub">
+                    <a href="aboutus-page.html" class="drawer-menu__link-sub">
                       <p class="drawer__logo-text">私たちについて</p>
                     </a>
                   </li>
@@ -493,7 +493,7 @@
                 </a>
               </li>
               <li class="footer-menu__item">
-                <a href="price-page.html" class="footer-menu__sub">
+                <a href="price-page.html" class="footer-menu__link-sub">
                   <p class="footer-menu__logo-text">料金一覧</p>
                 </a>
               </li>
