--- a/src/blog-page.html
+++ b/src/blog-page.html
@@ -80,7 +80,7 @@
               <div class="drawer-menu__container-left">
                 <ul class="drawer-menu__items-upper">
                   <li class="drawer-menu__item">
-                    <a href="campaign-page.html" class="drawer-menu__main">
+                    <a href="campaign-page.html" class="drawer-menu__link-main">
                       <p class="drawer__logo-text">キャンペーン</p>
                     </a>
                   </li>
@@ -88,14 +88,14 @@
                   <li class="drawer-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
                   <li class="drawer-menu__item-text"><a href="#">ナイトダイビング</a></li>
                   <li class="drawer-menu__item">
-                    <a href="aboutus-page.html" class="drawer-menu__sub">
+                    <a href="aboutus-page.html" class="drawer-menu__link-sub">
                       <p class="drawer__logo-text">私たちについて</p>
                     </a>
                   </li>
                 </ul>
                 <ul class="drawer-menu__items-bottom">
                   <li class="drawer-menu__item">
-                    <a href="information-page.html" class="drawer-menu__main">
+                    <a href="information-page.html" class="drawer-menu__link-main">
                       <p class="drawer__logo-text">ダイビング情報</p>
                     </a>
                   </li>
@@ -560,7 +560,7 @@
           <div class="footer-menu__left">
             <ul class="footer-menu__left-items-upper">
               <li class="footer-menu__item">
-                <a href="campaign-page.html" class="footer-menu__main">
+                <a href="campaign-page.html" class="footer-menu__link-main">
                   <p class="footer-menu__logo-text">キャンペーン</p>
                 </a>
               </li>
@@ -597,7 +597,7 @@
                 </a>
               </li>
               <li class="footer-menu__item">
-                <a href="price-page.html" class="footer-menu__sub">
+                <a href="price-page.html" class="footer-menu__link-sub">
                   <p class="footer-menu__logo-text">料金一覧</p>
                 </a>
               </li>
