--- a/src/information-page.html
+++ b/src/information-page.html
@@ -80,7 +80,7 @@
               <div class="drawer-menu__container-left">
                 <ul class="drawer-menu__items-upper">
                   <li class="drawer-menu__item">
-                    <a href="campaign-page.html" class="drawer-menu__main">
+                    <a href="campaign-page.html" class="drawer-menu__link-main">
                       <p class="drawer__logo-text">キャンペーン</p>
                     </a>
                   </li>
@@ -332,7 +332,7 @@
           <div class="footer-menu__left">
             <ul class="footer-menu__left-items-upper">
               <li class="footer-menu__item">
-                <a href="#" class="footer-menu__main">
+                <a href="#" class="footer-menu__link-main">
                   <p class="footer-menu__logo-text">キャンペーン</p>
                 </a>
               </li>
