--- a/src/page-404.html
+++ b/src/page-404.html
@@ -81,7 +81,7 @@
                 <div class="drawer-menu__container-left">
                   <ul class="drawer-menu__items-upper">
                     <li class="drawer-menu__item">
-                      <a href="campaign-page.html" class="drawer-menu__main">
+                      <a href="campaign-page.html" class="drawer-menu__link-main">
                         <p class="drawer__logo-text">キャンペーン</p>
                       </a>
                     </li>
@@ -89,7 +89,7 @@
                     <li class="drawer-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
                     <li class="drawer-menu__item-text"><a href="#">ナイトダイビング</a></li>
                     <li class="drawer-menu__item">
-                      <a href="aboutus-page.html" class="drawer-menu__sub">
+                      <a href="aboutus-page.html" class="drawer-menu__link-sub">
                         <p class="drawer__logo-text">私たちについて</p>
                       </a>
                     </li>
