--- a/src/terms-page.html
+++ b/src/terms-page.html
@@ -289,7 +289,7 @@
             <div class="footer-menu__left">
               <ul class="footer-menu__left-items-upper">
                 <li class="footer-menu__item">
-                  <a href="#" class="footer-menu__main">
+                  <a href="#" class="footer-menu__link-main">
                     <p class="footer-menu__logo-text">キャンペーン</p>
                   </a>
                 </li>
