タブとページネーション修正

--- a/src/voice-page.html
+++ b/src/voice-page.html
@@ -335,11 +335,11 @@
               <div class="pagination__nav">
                 <a class="pagination__prev" href="#"></a>
                 <span class="pagination__current">1</span>
-                <a class="page larger" href="#">2</a>
-                <a class="page larger" href="#">3</a>
-                <a class="page larger" href="#">4</a>
-                <a class="page larger md-none" href="#">5</a>
-                <a class="page larger md-none" href="#">6</a>
+                <a class="pagination__larger" href="#">2</a>
+                <a class="pagination__larger" href="#">3</a>
+                <a class="pagination__larger" href="#">4</a>
+                <a class="pagination__larger md-none" href="#">5</a>
+                <a class="pagination__larger md-none" href="#">6</a>
                 <a class="pagination__next" href="#"></a>
               </div>
             </div>
