--- a/src/blog-page.html
+++ b/src/blog-page.html
@@ -308,11 +308,11 @@
                   <div class="pagination-blog__nav">
                     <a class="pagination-blog__prev" href="#"></a>
                     <span class="pagination-blog__current">1</span>
-                    <a class="page larger" href="#">2</a>
-                    <a class="page larger" href="#">3</a>
-                    <a class="page larger" href="#">4</a>
-                    <a class="page larger md-none" href="#">5</a>
-                    <a class="page larger md-none" href="#">6</a>
+                    <a class="pagination__larger" href="#">2</a>
+                    <a class="pagination__larger" href="#">3</a>
+                    <a class="pagination__larger" href="#">4</a>
+                    <a class="pagination__larger md-none" href="#">5</a>
+                    <a class="pagination__larger md-none" href="#">6</a>
                     <a class="pagination-blog__next" href="#"></a>
                   </div>
                 </div>
