リンク修正

--- a/src/campaign-page.html
+++ b/src/campaign-page.html
@@ -99,9 +99,9 @@
                       <p class="drawer__logo-text">ダイビング情報</p>
                     </a>
                   </li>
-                  <li class="drawer-menu__item-text"><a href="#">ライセンス講習</a></li>
-                  <li class="drawer-menu__item-text"><a href="#">体験ダイビング</a></li>
-                  <li class="drawer-menu__item-text"><a href="#">ファンダイビング</a></li>
+                  <li class="drawer-menu__item-text"><a href="information-page.html?id=tab1">ライセンス講習</a></li>
+                  <li class="drawer-menu__item-text"><a href="information-page.html?id=tab3">体験ダイビング</a></li>
+                  <li class="drawer-menu__item-text"><a href="information-page.html?id=tab2">ファンダイビング</a></li>
                   <li class="drawer-menu__item">
                     <a href="blog-page.html" class="drawer-menu__link-sub">
                       <p class="drawer__logo-text">ブログ</p>
@@ -121,9 +121,9 @@
                       <p class="drawer__logo-text">料金一覧</p>
                     </a>
                   </li>
-                  <li class="drawer-menu__item-text-b"><a href="#">ライセンス講習</a></li>
-                  <li class="drawer-menu__item-text-b"><a href="#">体験ダイビング</a></li>
-                  <li class="drawer-menu__item-text-b"><a href="#">ファンダイビング</a></li>
+                  <li class="drawer-menu__item-text-b"><a href="information-page.html?id=tab1">ライセンス講習</a></li>
+                  <li class="drawer-menu__item-text-b"><a href="information-page.html?id=tab3">体験ダイビング</a></li>
+                  <li class="drawer-menu__item-text-b"><a href="information-page.html?id=tab2">ファンダイビング</a></li>
                 </ul>
                 <ul class="drawer-menu__items-bottom">
                   <li class="drawer-menu__item">
@@ -423,9 +423,9 @@
                   <p class="footer-menu__logo-text">ダイビング情報</p>
                 </a>
               </li>
-              <li class="footer-menu__item-text"><a href="#">ライセンス講習</a></li>
-              <li class="footer-menu__item-text"><a href="#">体験ダイビング</a></li>
-              <li class="footer-menu__item-text"><a href="#">ファンダイビング</a></li>
+              <li class="footer-menu__item-text"><a href="information-page.html?id=tab1">ライセンス講習</a></li>
+              <li class="footer-menu__item-text"><a href="information-page.html?id=tab3">体験ダイビング</a></li>
+              <li class="footer-menu__item-text"><a href="information-page.html?id=tab2">ファンダイビング</a></li>
               <li class="footer-menu__item">
                 <a href="blog-page.html" class="footer-menu__link-sub">
                   <p class="footer-menu__logo-text">ブログ</p>
@@ -445,9 +445,9 @@
                   <p class="footer-menu__logo-text">料金一覧</p>
                 </a>
               </li>
-              <li class="footer-menu__item-text-b"><a href="#">ライセンス講習</a></li>
-              <li class="footer-menu__item-text-b"><a href="#">体験ダイビング</a></li>
-              <li class="footer-menu__item-text-b"><a href="#">ファンダイビング</a></li>
+              <li class="footer-menu__item-text-b"><a href="information-page.html?id=tab1">ライセンス講習</a></li>
+              <li class="footer-menu__item-text-b"><a href="information-page.html?id=tab3">体験ダイビング</a></li>
+              <li class="footer-menu__item-text-b"><a href="information-page.html?id=tab2">ファンダイビング</a></li>
             </ul>
             <ul class="footer-menu__right-items-bottom">
               <li class="footer-menu__item">
