--- a/src/information-page.html
+++ b/src/information-page.html
@@ -181,29 +181,29 @@
         <div class="information-page__inner inner">
           <div class="information-page__tab information-tab">
             <ul class="information-tab__list">
-              <li class="information-tab__button js-tab-button is-active">
+              <li id="tab1" class="information-tab__button js-tab-button is-active">
                 <div class="information-tab__button-img md-none">
                   <img class="color-change" src="./assets/images/tab-logo1.svg" alt="クジラのアイコン" />
                 </div>
-                <h2 class="information-tab__title">ライセンス<br class="md-show" />講習</h2>
+                  <h2 class="information-tab__title">ライセンス<br class="md-show" />講習</h2>
               </li>
-              <li class="information-tab__button js-tab-button">
+              <li id="tab2" class="information-tab__button js-tab-button">
                 <div class="information-tab__button-img md-none">
                   <img class="color-change" src="./assets/images/tab-logo2.svg" alt="サメのアイコン" />
                 </div>
-                <h2 class="information-tab__title">ファン<br class="md-show" />ダイビング</h2>
+                  <h2 class="information-tab__title">ファン<br class="md-show" />ダイビング</h2>
               </li>
-              <li class="information-tab__button js-tab-button">
+              <li id="tab3" class="information-tab__button js-tab-button">
                 <div class="information-tab__button-img md-none">
                   <img class="color-change" src="./assets/images/tab-logo3.svg" alt="魚のアイコン" />
                 </div>
-                <h2 class="information-tab__title">体験<br class="md-show" />ダイビング</h2>
+                  <h2 class="information-tab__title">体験<br class="md-show" />ダイビング</h2>
               </li>
             </ul>
             <div class="information-tab__contents">
               <div class="information-tab__content js-tab-content is-active">
                 <ul class="information-tab__cards information-cards">
-                  <li class="information-cards__card information-card">
+                  <li id="tab1" class="information-cards__card information-card">
                     <div class="information-card__body">
                       <h3 class="information-card__title">ライセンス講習</h3>
                       <p class="information-card__text">
@@ -220,7 +220,7 @@
               </div>
               <div class="information-tab__content js-tab-content">
                 <ul class="information-tab__cards information-cards">
-                  <li class="information-cards__card information-card">
+                  <li id="tab2" class="information-cards__card information-card">
                     <div class="information-card__body">
                       <h3 class="information-card__title">ファンダイビング</h3>
                       <p class="information-card__text">ブランクダイバー、ライセンスを取り立ての方も安心！沖縄本島を代表する「青の洞窟」（真栄田岬）やケラマ諸島などメジャーなポイントはモチロンのこと、最北端「辺戸岬」や最南端の「大渡海岸」等もご用意！</p>
@@ -233,7 +233,7 @@
               </div>
               <div class="information-tab__content js-tab-content">
                 <ul class="information-tab__cards information-cards">
-                  <li class="information-cards__card information-card">
+                  <li id="tab3" class="information-cards__card information-card">
                     <div class="information-card__body">
                       <h3 class="information-card__title">体験ダイビング</h3>
                       <p class="information-card__text">ブランクダイバー、ライセンスを取り立ての方も安心！沖縄本島を代表する「青の洞窟」（真栄田岬）やケラマ諸島などメジャーなポイントはモチロンのこと、最北端「辺戸岬」や最南端の「大渡海岸」等もご用意！</p>
@@ -351,9 +351,9 @@
                   <p class="footer-menu__logo-text">ダイビング情報</p>
                 </a>
               </li>
-              <li class="footer-menu__item-text"><a href="#">ライセンス講習</a></li>
-              <li class="footer-menu__item-text"><a href="#">体験ダイビング</a></li>
-              <li class="footer-menu__item-text"><a href="#">ファンダイビング</a></li>
+              <li class="footer-menu__item-text"><a href="information-page.html?id=tab1">ライセンス講習</a></li>
+              <li class="footer-menu__item-text"><a href="information-page.html?id=tab3">体験ダイビング</a></li>
+              <li class="footer-menu__item-text"><a href="information-page.html?id=tab2">ファンダイビング</a></li>
               <li class="footer-menu__item">
                 <a href="blog-page.html" class="footer-menu__link-sub">
                   <p class="footer-menu__logo-text">ブログ</p>
