--- a/src/voice-page.html
+++ b/src/voice-page.html
@@ -84,9 +84,9 @@
                       <p class="drawer__logo-text">キャンペーン</p>
                     </a>
                   </li>
-                  <li class="drawer-menu__item-text"><a href="#">ライセンス取得</a></li>
-                  <li class="drawer-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
-                  <li class="drawer-menu__item-text"><a href="#">ナイトダイビング</a></li>
+                  <li class="drawer-menu__item-text"><a href="information-page.html?id=tab1">ライセンス取得</a></li>
+                  <li class="drawer-menu__item-text"><a href="information-page.html?id=tab3">貸切体験ダイビング</a></li>
+                  <li class="drawer-menu__item-text"><a href="information-page.html?id=tab2">ナイトダイビング</a></li>
                   <li class="drawer-menu__item">
                     <a href="aboutus-page.html" class="drawer-menu__link-sub">
                       <p class="drawer__logo-text">私たちについて</p>
@@ -99,9 +99,9 @@
                       <p class="drawer__logo-text">ダイビング情報</p>
                     </a>
                   </li>
-                  <li class="drawer-menu__item-text"><a href="#">ライセンス講習</a></li>
-                  <li class="drawer-menu__item-text"><a href="#">体験ダイビング</a></li>
-                  <li class="drawer-menu__item-text"><a href="#">ファンダイビング</a></li>
+                  <li class="drawer-menu__item-text"><a href="information-page.html?id=tab1">ライセンス講習</a></li>
+                  <li class="drawer-menu__item-text"><a href="information-page.html?id=tab3">体験ダイビング</a></li>
+                  <li class="drawer-menu__item-text"><a href="information-page.html?id=tab2">ファンダイビング</a></li>
                   <li class="drawer-menu__item">
                     <a href="blog-page.html" class="drawer-menu__link-sub">
                       <p class="drawer__logo-text">ブログ</p>
@@ -121,9 +121,9 @@
                       <p class="drawer__logo-text">料金一覧</p>
                     </a>
                   </li>
-                  <li class="drawer-menu__item-text-b"><a href="#">ライセンス講習</a></li>
-                  <li class="drawer-menu__item-text-b"><a href="#">体験ダイビング</a></li>
-                  <li class="drawer-menu__item-text-b"><a href="#">ファンダイビング</a></li>
+                  <li class="drawer-menu__item-text-b"><a href="information-page.html?id=tab1">ライセンス講習</a></li>
+                  <li class="drawer-menu__item-text-b"><a href="information-page.html?id=tab3">体験ダイビング</a></li>
+                  <li class="drawer-menu__item-text-b"><a href="information-page.html?id=tab2">ファンダイビング</a></li>
                 </ul>
                 <ul class="drawer-menu__items-bottom">
                   <li class="drawer-menu__item">
@@ -181,9 +181,9 @@
         <div class="voice-page-tab__inner inner">
           <div class="campaign-page-tab__items campaign-tab">
             <a href="#" class="campaign-tab__item is-color">ALL</a>
-            <a href="#" class="campaign-tab__item">ライセンス講習</a>
-            <a href="#" class="campaign-tab__item">ファンダイビング</a>
-            <a href="#" class="campaign-tab__item">体験ダイビング</a>
+            <a href="information-page.html?id=tab1" class="campaign-tab__item">ライセンス講習</a>
+            <a href="information-page.html?id=tab3" class="campaign-tab__item">ファンダイビング</a>
+            <a href="information-page.html?id=tab2" class="campaign-tab__item">体験ダイビング</a>
           </div>
         </div>
       </div>
@@ -449,9 +449,9 @@
                   <p class="footer-menu__logo-text">ダイビング情報</p>
                 </a>
               </li>
-              <li class="footer-menu__item-text"><a href="#">ライセンス講習</a></li>
-              <li class="footer-menu__item-text"><a href="#">体験ダイビング</a></li>
-              <li class="footer-menu__item-text"><a href="#">ファンダイビング</a></li>
+              <li class="footer-menu__item-text"><a href="information-page.html?id=tab1">ライセンス講習</a></li>
+              <li class="footer-menu__item-text"><a href="information-page.html?id=tab3">体験ダイビング</a></li>
+              <li class="footer-menu__item-text"><a href="information-page.html?id=tab2">ファンダイビング</a></li>
               <li class="footer-menu__item">
                 <a href="blog-page.html" class="footer-menu__link-sub">
                   <p class="footer-menu__logo-text">ブログ</p>
@@ -471,9 +471,9 @@
                   <p class="footer-menu__logo-text">料金一覧</p>
                 </a>
               </li>
-              <li class="footer-menu__item-text-b"><a href="#">ライセンス講習</a></li>
-              <li class="footer-menu__item-text-b"><a href="#">体験ダイビング</a></li>
-              <li class="footer-menu__item-text-b"><a href="#">ファンダイビング</a></li>
+              <li class="footer-menu__item-text-b"><a href="information-page.html?id=tab1">ライセンス講習</a></li>
+              <li class="footer-menu__item-text-b"><a href="information-page.html?id=tab3">体験ダイビング</a></li>
+              <li class="footer-menu__item-text-b"><a href="information-page.html?id=tab2">ファンダイビング</a></li>
             </ul>
             <ul class="footer-menu__right-items-bottom">
               <li class="footer-menu__item">
