--- a/src/site-map-page.html
+++ b/src/site-map-page.html
@@ -100,9 +100,9 @@
                         <p class="drawer__logo-text">ダイビング情報</p>
                       </a>
                     </li>
-                    <li class="drawer-menu__item-text"><a href="#">ライセンス講習</a></li>
-                    <li class="drawer-menu__item-text"><a href="#">体験ダイビング</a></li>
-                    <li class="drawer-menu__item-text"><a href="#">ファンダイビング</a></li>
+                    <li class="drawer-menu__item-text"><a href="information-page.html?id=tab1">ライセンス講習</a></li>
+                    <li class="drawer-menu__item-text"><a href="information-page.html?id=tab3">体験ダイビング</a></li>
+                    <li class="drawer-menu__item-text"><a href="information-page.html?id=tab2">ファンダイビング</a></li>
                     <li class="drawer-menu__item">
                       <a href="blog-page.html" class="drawer-menu__link-sub">
                         <p class="drawer__logo-text">ブログ</p>
@@ -122,9 +122,9 @@
                         <p class="drawer__logo-text">料金一覧</p>
                       </a>
                     </li>
-                    <li class="drawer-menu__item-text-b"><a href="#">ライセンス講習</a></li>
-                    <li class="drawer-menu__item-text-b"><a href="#">体験ダイビング</a></li>
-                    <li class="drawer-menu__item-text-b"><a href="#">ファンダイビング</a></li>
+                    <li class="drawer-menu__item-text-b"><a href="information-page.html?id=tab1">ライセンス講習</a></li>
+                    <li class="drawer-menu__item-text-b"><a href="information-page.html?id=tab3">体験ダイビング</a></li>
+                    <li class="drawer-menu__item-text-b"><a href="information-page.html?id=tab2">ファンダイビング</a></li>
                   </ul>
                   <ul class="drawer-menu__items-bottom">
                     <li class="drawer-menu__item">
@@ -203,9 +203,9 @@
                       <p class="site-map-menu__logo-text">ダイビング情報</p>
                     </a>
                   </li>
-                  <li class="site-map-menu__item-text"><a href="#">ライセンス講習</a></li>
-                  <li class="site-map-menu__item-text"><a href="#">体験ダイビング</a></li>
-                  <li class="site-map-menu__item-text"><a href="#">ファンダイビング</a></li>
+                  <li class="site-map-menu__item-text"><a href="information-page.html?id=tab1">ライセンス講習</a></li>
+                  <li class="site-map-menu__item-text"><a href="information-page.html?id=tab3">体験ダイビング</a></li>
+                  <li class="site-map-menu__item-text"><a href="information-page.html?id=tab2">ファンダイビング</a></li>
                   <li class="site-map-menu__item">
                     <a href="blog-page.html" class="site-map-menu__link-sub">
                       <p class="site-map-menu__logo-text">ブログ</p>
@@ -225,9 +225,9 @@
                       <p class="site-map-menu__logo-text">料金一覧</p>
                     </a>
                   </li>
-                  <li class="site-map-menu__item-text-b"><a href="#">ライセンス講習</a></li>
-                  <li class="site-map-menu__item-text-b"><a href="#">体験ダイビング</a></li>
-                  <li class="site-map-menu__item-text-b"><a href="#">ファンダイビング</a></li>
+                  <li class="site-map-menu__item-text-b"><a href="information-page.html?id=tab1">ライセンス講習</a></li>
+                  <li class="site-map-menu__item-text-b"><a href="information-page.html?id=tab3">体験ダイビング</a></li>
+                  <li class="site-map-menu__item-text-b"><a href="information-page.html?id=tab2">ファンダイビング</a></li>
                 </ul>
                 <ul class="site-map-menu__right-items-bottom">
                   <li class="site-map-menu__item">
@@ -358,9 +358,9 @@
                     <p class="footer-menu__logo-text">ダイビング情報</p>
                   </a>
                 </li>
-                <li class="footer-menu__item-text"><a href="#">ライセンス講習</a></li>
-                <li class="footer-menu__item-text"><a href="#">体験ダイビング</a></li>
-                <li class="footer-menu__item-text"><a href="#">ファンダイビング</a></li>
+                <li class="footer-menu__item-text"><a href="information-page.html?id=tab1">ライセンス講習</a></li>
+                <li class="footer-menu__item-text"><a href="information-page.html?id=tab3">体験ダイビング</a></li>
+                <li class="footer-menu__item-text"><a href="information-page.html?id=tab2">ファンダイビング</a></li>
                 <li class="footer-menu__item">
                   <a href="blog-page.html" class="footer-menu__link-sub">
                     <p class="footer-menu__logo-text">ブログ</p>
@@ -380,9 +380,9 @@
                     <p class="footer-menu__logo-text">料金一覧</p>
                   </a>
                 </li>
-                <li class="footer-menu__item-text-b"><a href="#">ライセンス講習</a></li>
-                <li class="footer-menu__item-text-b"><a href="#">体験ダイビング</a></li>
-                <li class="footer-menu__item-text-b"><a href="#">ファンダイビング</a></li>
+                <li class="footer-menu__item-text-b"><a href="information-page.html?id=tab1">ライセンス講習</a></li>
+                <li class="footer-menu__item-text-b"><a href="information-page.html?id=tab3">体験ダイビング</a></li>
+                <li class="footer-menu__item-text-b"><a href="information-page.html?id=tab2">ファンダイビング</a></li>
               </ul>
               <ul class="footer-menu__right-items-bottom">
                 <li class="footer-menu__item">
