ブログページ修正

--- a/src/blog-page.html
+++ b/src/blog-page.html
@@ -179,8 +179,8 @@
       <!--ブログ-->
       <section id="blog-page" class="blog-page blog-page-top">
         <div class="blog-page__inner inner">
-          <div class="blog-page__container">
-            <div class="blog-page__container-left">
+          <div class="blog-page__container blog-page-container">
+            <div class="blog-page__container-left blog-page-container--left">
               <div class="blog-cards blog-cards--another">
                 <a href="blog-page-detail.html" class="blog-page-cards__item-box blog-card">
                   <div class="blog-card__item">
