--- a/src/faq-page.html
+++ b/src/faq-page.html
@@ -181,7 +181,7 @@
         <div class="faq-page-accordion__inner inner">
           <div class="faq-page-accordion__container">
             <div class="faq-page-accordion__item js-faq-page-accordion-item">
-              <h3 class="faq-page-accordion__title js-faq-page-accordion-title">
+              <h3 class="faq-page-accordion__title is-open js-faq-page-accordion-title">
                 ここに質問が入ります。
               </h3>
               <div class="faq-page-accordion__content js-faq-page-accordion-content">
@@ -189,7 +189,7 @@
               </div>
             </div>
             <div class="faq-page-accordion__item js-faq-page-accordion-item">
-              <h3 class="faq-page-accordion__title js-faq-page-accordion-title">
+              <h3 class="faq-page-accordion__title is-open js-faq-page-accordion-title">
                 ここに質問が入ります。
               </h3>
               <div class="faq-page-accordion__content js-faq-page-accordion-content">
@@ -197,7 +197,7 @@
               </div>
             </div>
             <div class="faq-page-accordion__item js-faq-page-accordion-item">
-              <h3 class="faq-page-accordion__title js-faq-page-accordion-title">
+              <h3 class="faq-page-accordion__title is-open js-faq-page-accordion-title">
                 ここに質問が入ります。
               </h3>
               <div class="faq-page-accordion__content js-faq-page-accordion-content">
@@ -205,7 +205,7 @@
               </div>
             </div>
             <div class="faq-page-accordion__item js-faq-page-accordion-item">
-              <h3 class="faq-page-accordion__title js-faq-page-accordion-title">
+              <h3 class="faq-page-accordion__title is-open js-faq-page-accordion-title">
                 ここに質問が入ります。
               </h3>
               <div class="faq-page-accordion__content js-faq-page-accordion-content">
@@ -213,7 +213,7 @@
               </div>
             </div>
             <div class="faq-page-accordion__item js-faq-page-accordion-item">
-              <h3 class="faq-page-accordion__title js-faq-page-accordion-title">
+              <h3 class="faq-page-accordion__title is-open js-faq-page-accordion-title">
                 ここに質問が入ります。
               </h3>
               <div class="faq-page-accordion__content js-faq-page-accordion-content">
@@ -221,7 +221,7 @@
               </div>
             </div>
             <div class="faq-page-accordion__item js-faq-page-accordion-item">
-              <h3 class="faq-page-accordion__title js-faq-page-accordion-title">
+              <h3 class="faq-page-accordion__title is-open js-faq-page-accordion-title">
                 ここに質問が入ります。
               </h3>
               <div class="faq-page-accordion__content js-faq-page-accordion-content">
@@ -229,7 +229,7 @@
               </div>
             </div>
             <div class="faq-page-accordion__item js-faq-page-accordion-item">
-              <h3 class="faq-page-accordion__title js-faq-page-accordion-title">
+              <h3 class="faq-page-accordion__title is-open js-faq-page-accordion-title">
                 ここに質問が入ります。
               </h3>
               <div class="faq-page-accordion__content js-faq-page-accordion-content">
