--- a/src/price-page.html
+++ b/src/price-page.html
@@ -182,11 +182,9 @@
           <div class="price-page__items">
             <div class="price-page__items-item price-page-item">
               <table class="price-page-item__box price-page-box">
+                <h2 class="price-page-box__head-sp">ライセンス講習</h2>
+                <h2 class="price-page-box__head-pc">ライセンス講習</h2>
                 <tr>
-                  <th class="price-page-box__head-sp" colspan="2">ライセンス講習</th>
-                </tr>
-                <tr>
-                  <th class="price-page-box__head-pc" rowspan="3">ライセンス講習</th>
                   <td class="price-page-box__name">オープンウォーター<br class="md-show" />ダイバーコース</td>
                   <td class="price-page-box__price">¥50,000</td>
                 </tr>
@@ -202,11 +200,9 @@
             </div>
             <div class="price-page__items-item price-page-item">
               <table class="price-page-item__box price-page-box">
+                <h2 class="price-page-box__head-sp">体験ダイビング</h2>
+                <h2 class="price-page-box__head-pc-long">体験ダイビング</h2>
                 <tr>
-                  <th class="price-page-box__head-sp" colspan="2">体験ダイビング</th>
-                </tr>
-                <tr>
-                  <th class="price-page-box__head-pc-long" rowspan="4">体験ダイビング</th>
                   <td class="price-page-box__name">ビーチ体験ダイビング<br class="md-show" />(半日)</td>
                   <td class="price-page-box__price">¥7,000</td>
                 </tr>
@@ -226,11 +222,9 @@
             </div>
             <div class="price-page__items-item price-page-item">
               <table class="price-page-item__box price-page-box">
+                <h2 class="price-page-box__head-sp-middle">ファンダイビング</h2>
+                <h2 class="price-page-box__head-pc-long">ファンダイビング</h2>
                 <tr>
-                  <th class="price-page-box__head-sp-middle" colspan="2">ファンダイビング</th>
-                </tr>
-                <tr>
-                  <th class="price-page-box__head-pc-long" rowspan="4">ファンダイビング</th>
                   <td class="price-page-box__name">ビーチダイビング<br class="md-show" />(2ダイブ)</td>
                   <td class="price-page-box__price">¥14,000</td>
                 </tr>
@@ -250,12 +244,9 @@
             </div>
             <div class="price-page__items-item price-page-item">
               <table class="price-page-item__box price-page-box">
+                <h2 class="price-page-box__head-sp-last">スペシャルダイビング</h2>
+                <h2 class="price-page-box__head-pc">スペシャルダイビング</h2>
                 <tr>
-                  <th class="price-page-box__head-sp-last" colspan="2">スペシャルダイビング</th>
-                </tr>
-                <tr>
-                  <th class="price-page-box__head-pc" rowspan="4">スペシャルダイビング</th>
-
                   <td class="price-page-box__name">貸切ダイビング<br class="md-show" />(2ダイブ)</td>
                   <td class="price-page-box__price">¥24,000</td>
                 </tr>
